--- a/src/components/login-form.css
+++ b/src/components/login-form.css
@@ -1,7 +1,14 @@
-.login-form {
+.form {
     max-width: 300px;
   }
 
-.login-form-button {
+#username, #password {
+  width: 100%;
+  height: 32px;
+  }
+
+
+
+button {
     width: 100%;
   }
