--- a/src/components/edit.css
+++ b/src/components/edit.css
@@ -9,3 +9,12 @@
     border-bottom: 1px solid #333333;
     border-left: 1px solid #CCCCCC;
   }
+
+
+  #firstName, #lastName, #phone, #location, #weddingDate {
+    width: 100%;
+    height: 32px;
+    padding: 4px 11px;
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+  }
