--- a/src/components/registration-form.css
+++ b/src/components/registration-form.css
@@ -1,4 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 #username, #password, #email, #fullName {
   width: 100%;
   height: 32px;
-  }
+  padding: 4px 11px;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+}
