--- a/src/components/edit.css
+++ b/src/components/edit.css
@@ -18,3 +18,11 @@
     border: 1px solid #d9d9d9;
     border-radius: 4px;
   }
+
+  #notes {
+    height: 100px;
+    width: 100%;
+    padding: 4px 11px;
+    border: 1px solid #d9d9d9;
+    border-radius: 4px;
+  }
