--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
+* {
+  box-sizing: border-box;
+  /* text-align: center; */
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+
+}
+
+ ul {
+   list-style: none;
 }
