--- a/src/components/client.css
+++ b/src/components/client.css
@@ -12,5 +12,36 @@
 
   .client-detail {
     text-align: center;
-    
+    /* background: #eee; */
   }
+
+.card {
+    position: absolute;
+    top: 25%;
+    left: 50%;
+    width: 300px;
+    height: 300px;
+    margin: -150px;
+    float: left;
+    perspective: 500px;
+  }
+
+
+  .content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  }
+
+.deets {
+  padding: 15px;
+  text-align: center;
+  vertical-align:middle;
+  font-weight: 300;
+  font-size: 12px;
+}
+
+.date {
+  color: #999999;
+}
