fix sign in and registration button

--- a/src/components/login-form.css
+++ b/src/components/login-form.css
@@ -6,7 +6,18 @@
 }
 
 
-button {
-  width: 100%;
+.sign-in-button {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  cursor: pointer;
+  padding: 0 15px;
+  font-size: 14px;
+  border-radius: 4px;
+  height: 32px;
+  position: relative;
+  color: #fff;
+  background-color: #1890ff;
+  border-color: #1890ff;
+  width: 100%
 }
-
