--- a/src/components/notes.css
+++ b/src/components/notes.css
@@ -1,4 +1,4 @@
-button {
+/* button {
     display: inline-block;
     font-weight: 400;
     text-align: center;
@@ -11,5 +11,5 @@ button {
     color: #fff;
     background-color: #1890ff;
     border-color: #1890ff;
-}
+} */
 
