--- a/src/components/registration-form.css
+++ b/src/components/registration-form.css
@@ -13,3 +13,19 @@
 .register-page{
   padding: 20px;
 }
+
+.register-button {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  cursor: pointer;
+  padding: 0 15px;
+  font-size: 14px;
+  border-radius: 4px;
+  height: 32px;
+  position: relative;
+  color: #fff;
+  background-color: #1890ff;
+  border-color: #1890ff;
+  width: 100%
+}
