--- a/src/components/upcoming-wedding.css
+++ b/src/components/upcoming-wedding.css
@@ -1,4 +1,4 @@
-button #newClient {
+.new-client-button {
     line-height: 1.5;
     display: inline-block;
     font-weight: 400;
@@ -14,7 +14,7 @@ button #newClient {
     position: relative;
     color: rgba(0,0,0,.65);
     background-color: #fff;
-    border-color: #d9d9d9;
+    border-color: lightblue;
    
 }
 
