--- a/src/components/client.css
+++ b/src/components/client.css
@@ -2,17 +2,10 @@
     max-width: 300px;
   }
   
-  #firstName, #lastName, #phone, #location, #weddingDate {
-    width: 100%;
-    height: 32px;
-    padding: 4px 11px;
-    border: 1px solid #d9d9d9;
-    border-radius: 4px;
-  }
 
-  .client-detail {
+
+.client-detail {
     text-align: center;
-    /* background: #eee; */
   }
 
 .card {
@@ -27,11 +20,11 @@
   }
 
 
-  .content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
+.content {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 0 15px rgba(0,0,0,0.1);
   }
 
 .deets {
@@ -44,4 +37,20 @@
 
 .date {
   color: #999999;
+}
+
+.form-button {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  cursor: pointer;
+  padding: 0 15px;
+  font-size: 14px;
+  border-radius: 4px;
+  height: 32px;
+  position: relative;
+  color: #fff;
+  background-color: #1890ff;
+  border-color: #1890ff;
+  width: 100%
 }
