--- a/src/components/log-out.css
+++ b/src/components/log-out.css
@@ -1,4 +1,4 @@
-.logout-button {
+.button {
     line-height: 1.5;
     display: inline-block;
     font-weight: 400;
@@ -14,5 +14,5 @@
     position: relative;
     color: rgba(0,0,0,.65);
     background-color: #fff;
-    border-color: lightblue;
+    border-color: #1890ff;
 }
