--- a/src/components/upcoming-wedding.css
+++ b/src/components/upcoming-wedding.css
@@ -14,7 +14,7 @@
     position: relative;
     color: rgba(0,0,0,.65);
     background-color: #fff;
-    border-color: lightblue;
+    border-color:#1890ff;
 }
 
 
