--- a/src/components/client.css
+++ b/src/components/client.css
@@ -8,7 +8,7 @@
     text-align: center;
   }
 
-.card {
+/* .card {
     position: absolute;
     top: 25%;
     left: 50%;
@@ -17,7 +17,7 @@
     margin: -150px;
     float: left;
     perspective: 500px;
-  }
+  } */
 
 
 .content {
