--- a/src/components/sign-in.css
+++ b/src/components/sign-in.css
@@ -1,7 +1,7 @@
 .sign-in {
-    text-align: center;
-    padding: 20px;
-    justify-content: center;
-    display: flex;
+    padding-top: 20em;
 }
 
+.link {
+    margin: 0 auto;
+}
