--- a/src/components/client.css
+++ b/src/components/client.css
@@ -24,7 +24,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
+  /* box-shadow: 0 0 15px rgba(0,0,0,0.1); */
   }
 
 .deets {
@@ -53,4 +53,8 @@
   background-color: #1890ff;
   border-color: #1890ff;
   width: 100%
+}
+
+.bottom {
+  padding-top: 30em;
 }
