add logo png, add cliend id

--- a/src/components/sign-in.css
+++ b/src/components/sign-in.css
@@ -1,8 +1,14 @@
 .sign-in {
-    padding-top: 20em;
+    padding-top: 4em;
     text-align: center;
 }
 
 a {
     text-decoration: none;
+}
+
+
+#logo {
+    max-width: 32%;
+    margin: 10%;
 }
