--- a/src/components/upcoming-wedding.css
+++ b/src/components/upcoming-wedding.css
@@ -18,24 +18,29 @@
 }
 
 
-div .upcoming-wedding {
+.upcoming-wedding {
     border-collapse: collapse;
-    border-spacing: 0;
-    width: 100%;
+    /* border-spacing: 0; */
+    padding-top: 1em;
+    padding-bottom: 1em;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
     text-align: center;
+    background:black;
 }
 
 .upcoming-wedding-table {
     margin-left: auto;
     margin-right: auto;
-    padding-left: 4em;
-    padding-right: 4em;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 h1 {
     font-size: 30px;
     color: grey;
-    font-weight: 300;
+    font-weight: 600;
     text-align: center;
     margin-bottom: 15px;
 }
@@ -53,16 +58,16 @@ background-color: rgba(255, 255, 255, 0.3);
     height:300px;
     overflow-x:auto;
     margin-top: 0px;
-    border: 1px solid rgba(255,255,255,0.3);
+    /* border: 1px solid rgba(255,255,255,0.3); */
 }
 
 
 th {
     padding: 20px 15px;
     text-align: left;
-    font-weight: 500;
-    font-size: 12px;
-    color:grey;
+    font-weight: 800;
+    font-size: 13px;
+    color:#E0E0E0;
     text-transform: uppercase;
 }
 
@@ -71,7 +76,11 @@ td {
     text-align: left;
     vertical-align:middle;
     font-weight: 300;
-    font-size: 12px;
-    color:grey;
-    border-bottom: solid 1px rgba(255,255,255,0.1);
+    font-size: 13px;
+    color:#E0E0E0;
+    /* border-bottom: solid 1px rgba(255,255,255,0.1); */
+}
+
+.detail-link {
+    color:#FFECB3;
 }
