install jest and enzyme

--- a/src/components/upcoming-wedding.css
+++ b/src/components/upcoming-wedding.css
@@ -84,3 +84,12 @@ td {
 .detail-link {
     color:#FFECB3;
 }
+
+
+/* margin top
+vh 20% for upcoming wedidng box 
+or position relative with top value 
+
+buttons maybe floats
+flex responsive layout
+@media query switch to column at smaller size*/
