--- a/src/components/upcoming-wedding.css
+++ b/src/components/upcoming-wedding.css
@@ -28,6 +28,7 @@
     width: 90%;
     text-align: center;
     background:black;
+    border-radius: 10px;
 }
 
 .upcoming-wedding-table {
@@ -85,6 +86,22 @@ td {
     color:#FFECB3;
 }
 
+
+.button-container {
+    width: 90%;
+    margin: 0 auto 2rem auto;
+    padding-top: 3rem;
+}
+
+
+.button-container a {
+    display: inline-block;
+    margin-right: 1rem;
+}
+
+.logout-container {
+    display: inline-block;
+}
 
 /* margin top
 vh 20% for upcoming wedidng box 
