--- a/src/components/log-out.css
+++ b/src/components/log-out.css
@@ -14,5 +14,5 @@
     position: relative;
     color: rgba(0,0,0,.65);
     background-color: #fff;
-    border-color: #1890ff;
+    border-color: #FFECB3;
 }
