--- a/src/components/upcoming-wedding.css
+++ b/src/components/upcoming-wedding.css
@@ -14,7 +14,7 @@
     position: relative;
     color: rgba(0,0,0,.65);
     background-color: #fff;
-    border-color:#1890ff;
+    border-color:#FFECB3;
 }
 
 
@@ -34,8 +34,8 @@
 .upcoming-wedding-table {
     margin-left: auto;
     margin-right: auto;
-    padding-left: 2em;
-    padding-right: 2em;
+    padding-left: 1.2em;
+    padding-right: 1.2em;
 }
 
 h1 {
@@ -43,7 +43,7 @@ h1 {
     color: grey;
     font-weight: 600;
     text-align: center;
-    margin-bottom: 15px;
+
 }
 
 table {
