take out background for edit

--- a/src/components/upcoming-wedding.css
+++ b/src/components/upcoming-wedding.css
@@ -68,7 +68,7 @@ th {
     text-align: left;
     font-weight: 800;
     font-size: 13px;
-    color:#E0E0E0;
+    color:#99A3A4 ;
     text-transform: uppercase;
 }
 
@@ -83,7 +83,7 @@ td {
 }
 
 .detail-link {
-    color:#FFECB3;
+    color:#F4D03F;
 }
 
 
