--- a/src/components/client.css
+++ b/src/components/client.css
@@ -93,6 +93,17 @@ li {
 }
 
 .loading {
-  text-align: center;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  background: rgba(0,0,0,0.5);
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
 }
+
+
 /* img{ display: inline-block; width: 33.33%; */
