--- a/src/components/sign-in.css
+++ b/src/components/sign-in.css
@@ -20,10 +20,11 @@ a {
 
 .i {
     fill: white;
+    stroke: white;
 }
 
 .tooltip {
-    margin: 15px;
+    margin: 9px;
 }
 .tooltip .tooltipText {
     visibility: hidden;
@@ -41,13 +42,17 @@ a {
     font-size: 10px;
 }
 
-@media all and (max-width: 600px) {   
+.form-error {
+    color:#E3F2FD;
+}
+
+/* @media all and (max-width: 600px) {   
     .Home section {     
         height: 100% !important; 
     } 
 }
 
-@media only screen and (max-height : 828px) {
+@media only screen and (max-width: 600px) and (max-height : 828px) {
     #logo {
         margin-top: -5rem;
     }
@@ -71,7 +76,4 @@ a {
         margin-top: -3rem;
     }
 }
-
-.form-error {
-    color:#E3F2FD;
-}
+ */
